@@ -190,6 +190,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 3649) Remove obsolete, broken moveCustomMessages script
 * (bug 3291) 'last' diff link for last history line when not at end
 * Avoid numerous redundant latest-revision lookups in history
+* Ability to set the table name for external storage servers
 
 
 === Caveats ===
